@@ -1,4 +1,5 @@
 0.3.3
+Matched version numbers in included plugins with main version.
 Save/Restore session now saves/restores main window size and position.
 Session manager now uses kkedit's save/restore session routines.
 Added 'Hide Tab' to keyboard shortcuts ( defaults to ^h, 'Delete Word Under Cursor' now defaults to ^d ).
